{
  "version": 4,
  "terraform_version": "0.15.1",
  "serial": 29,
  "lineage": "d2506fc5-48ce-463a-93af-c489d0f58930",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "master",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "master-0",
          "schema_version": 0,
          "attributes": {
            "address": "34.118.62.203",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2021-05-31T11:25:57.959-07:00",
            "id": "projects/eco-bench/regions/europe-central2/addresses/kubeedge-cluster-master-0-pip",
            "name": "kubeedge-cluster-master-0-pip",
            "network_tier": "PREMIUM",
            "project": "eco-bench",
            "region": "europe-central2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/eco-bench/regions/europe-central2/addresses/kubeedge-cluster-master-0-pip",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/eco-bench/zones/europe-central2-a/instances/kubeedge-cluster-master-0"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "worker-0",
          "schema_version": 0,
          "attributes": {
            "address": "34.118.65.241",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2021-05-31T11:25:57.556-07:00",
            "id": "projects/eco-bench/regions/europe-central2/addresses/kubeedge-cluster-worker-0-pip",
            "name": "kubeedge-cluster-worker-0-pip",
            "network_tier": "PREMIUM",
            "project": "eco-bench",
            "region": "europe-central2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/eco-bench/regions/europe-central2/addresses/kubeedge-cluster-worker-0-pip",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/eco-bench/zones/europe-central2-a/instances/kubeedge-cluster-worker-0"
            ]
          }
        },
        {
          "index_key": "worker-1",
          "schema_version": 0,
          "attributes": {
            "address": "34.118.103.31",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2021-05-31T11:25:57.880-07:00",
            "id": "projects/eco-bench/regions/europe-central2/addresses/kubeedge-cluster-worker-1-pip",
            "name": "kubeedge-cluster-worker-1-pip",
            "network_tier": "PREMIUM",
            "project": "eco-bench",
            "region": "europe-central2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/eco-bench/regions/europe-central2/addresses/kubeedge-cluster-worker-1-pip",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/eco-bench/zones/europe-central2-a/instances/kubeedge-cluster-worker-1"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "worker_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.118.121.149",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2021-05-31T11:25:57.931-07:00",
            "id": "projects/eco-bench/regions/europe-central2/addresses/kubeedge-cluster-worker-lb-address",
            "name": "kubeedge-cluster-worker-lb-address",
            "network_tier": "PREMIUM",
            "project": "eco-bench",
            "region": "europe-central2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/eco-bench/regions/europe-central2/addresses/kubeedge-cluster-worker-lb-address",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/eco-bench/regions/europe-central2/forwardingRules/kubeedge-cluster-worker-https-lb-forward-rule",
              "https://www.googleapis.com/compute/v1/projects/eco-bench/regions/europe-central2/forwardingRules/kubeedge-cluster-worker-http-lb-forward-rule"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2021-05-31T11:26:50.918-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/eco-bench/global/firewalls/kubeedge-cluster-internal-firewall",
            "log_config": [],
            "name": "kubeedge-cluster-internal-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/eco-bench/global/networks/kubeedge-cluster-network",
            "priority": 500,
            "project": "eco-bench",
            "self_link": "https://www.googleapis.com/compute/v1/projects/eco-bench/global/firewalls/kubeedge-cluster-internal-firewall",
            "source_ranges": [
              "10.0.10.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "api_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "6443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-05-31T11:26:50.684-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/eco-bench/global/firewalls/kubeedge-cluster-api-server-firewall",
            "log_config": [],
            "name": "kubeedge-cluster-api-server-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/eco-bench/global/networks/kubeedge-cluster-network",
            "priority": 100,
            "project": "eco-bench",
            "self_link": "https://www.googleapis.com/compute/v1/projects/eco-bench/global/firewalls/kubeedge-cluster-api-server-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "deny_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [],
            "creation_timestamp": "2021-05-31T11:26:50.791-07:00",
            "deny": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/eco-bench/global/firewalls/kubeedge-cluster-default-firewall",
            "log_config": [],
            "name": "kubeedge-cluster-default-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/eco-bench/global/networks/kubeedge-cluster-network",
            "priority": 1000,
            "project": "eco-bench",
            "self_link": "https://www.googleapis.com/compute/v1/projects/eco-bench/global/firewalls/kubeedge-cluster-default-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ingress_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-05-31T11:26:50.921-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/eco-bench/global/firewalls/kubeedge-cluster-http-ingress-firewall",
            "log_config": [],
            "name": "kubeedge-cluster-http-ingress-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/eco-bench/global/networks/kubeedge-cluster-network",
            "priority": 100,
            "project": "eco-bench",
            "self_link": "https://www.googleapis.com/compute/v1/projects/eco-bench/global/firewalls/kubeedge-cluster-http-ingress-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ingress_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-05-31T11:26:50.840-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/eco-bench/global/firewalls/kubeedge-cluster-https-ingress-firewall",
            "log_config": [],
            "name": "kubeedge-cluster-https-ingress-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/eco-bench/global/networks/kubeedge-cluster-network",
            "priority": 100,
            "project": "eco-bench",
            "self_link": "https://www.googleapis.com/compute/v1/projects/eco-bench/global/firewalls/kubeedge-cluster-https-ingress-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "nodeport",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "30000-32767"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-05-31T11:26:51.032-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/eco-bench/global/firewalls/kubeedge-cluster-nodeport-firewall",
            "log_config": [],
            "name": "kubeedge-cluster-nodeport-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/eco-bench/global/networks/kubeedge-cluster-network",
            "priority": 100,
            "project": "eco-bench",
            "self_link": "https://www.googleapis.com/compute/v1/projects/eco-bench/global/firewalls/kubeedge-cluster-nodeport-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-05-31T11:26:50.781-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/eco-bench/global/firewalls/kubeedge-cluster-ssh-firewall",
            "log_config": [],
            "name": "kubeedge-cluster-ssh-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/eco-bench/global/networks/kubeedge-cluster-network",
            "priority": 100,
            "project": "eco-bench",
            "self_link": "https://www.googleapis.com/compute/v1/projects/eco-bench/global/firewalls/kubeedge-cluster-ssh-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "master_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "creation_timestamp": "2021-05-31T11:27:39.968-07:00",
            "id": "projects/eco-bench/regions/europe-central2/forwardingRules/kubeedge-cluster-master-lb-forward-rule",
            "ip_address": "34.116.174.242",
            "ip_protocol": "TCP",
            "is_mirroring_collector": false,
            "load_balancing_scheme": "EXTERNAL",
            "name": "kubeedge-cluster-master-lb-forward-rule",
            "network_tier": "PREMIUM",
            "port_range": "6443-6443",
            "project": "eco-bench",
            "region": "europe-central2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/eco-bench/regions/europe-central2/forwardingRules/kubeedge-cluster-master-lb-forward-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/eco-bench/regions/europe-central2/targetPools/kubeedge-cluster-master-lb-pool"
          },
          "dependencies": [
            "google_compute_instance.master",
            "google_compute_network.main",
            "google_compute_subnetwork.main",
            "google_compute_target_pool.master_lb",
            "google_compute_address.master"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "worker_http_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "creation_timestamp": "2021-05-31T11:27:40.717-07:00",
            "id": "projects/eco-bench/regions/europe-central2/forwardingRules/kubeedge-cluster-worker-http-lb-forward-rule",
            "ip_address": "34.118.121.149",
            "ip_protocol": "TCP",
            "is_mirroring_collector": false,
            "load_balancing_scheme": "EXTERNAL",
            "name": "kubeedge-cluster-worker-http-lb-forward-rule",
            "network_tier": "PREMIUM",
            "port_range": "80-80",
            "project": "eco-bench",
            "region": "europe-central2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/eco-bench/regions/europe-central2/forwardingRules/kubeedge-cluster-worker-http-lb-forward-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/eco-bench/regions/europe-central2/targetPools/kubeedge-cluster-worker-lb-pool"
          },
          "dependencies": [
            "google_compute_address.worker",
            "google_compute_address.worker_lb",
            "google_compute_instance.worker",
            "google_compute_network.main",
            "google_compute_subnetwork.main",
            "google_compute_target_pool.worker_lb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "worker_https_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "creation_timestamp": "2021-05-31T11:27:40.251-07:00",
            "id": "projects/eco-bench/regions/europe-central2/forwardingRules/kubeedge-cluster-worker-https-lb-forward-rule",
            "ip_address": "34.118.121.149",
            "ip_protocol": "TCP",
            "is_mirroring_collector": false,
            "load_balancing_scheme": "EXTERNAL",
            "name": "kubeedge-cluster-worker-https-lb-forward-rule",
            "network_tier": "PREMIUM",
            "port_range": "443-443",
            "project": "eco-bench",
            "region": "europe-central2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/eco-bench/regions/europe-central2/forwardingRules/kubeedge-cluster-worker-https-lb-forward-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/eco-bench/regions/europe-central2/targetPools/kubeedge-cluster-worker-lb-pool"
          },
          "dependencies": [
            "google_compute_subnetwork.main",
            "google_compute_target_pool.worker_lb",
            "google_compute_address.worker",
            "google_compute_address.worker_lb",
            "google_compute_instance.worker",
            "google_compute_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "master",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "master-0",
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20210429",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/eco-bench/zones/europe-central2-a/disks/kubeedge-cluster-master-0"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/eco-bench/zones/europe-central2-a/instances/kubeedge-cluster-master-0",
            "instance_id": "8197227563309372525",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-small",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDFKqYe+MLcN297yEeyJMOY/213RuaaofCKNzatn9tBtTdnylYIwIG5OzqNbEXX1vpsbF76PPI4XmCEO9oqCTE2/Zjo2+HwudYQtzIn1T+xGWPmTxJVw462sWEy817Gv5uR+rZSzstVhnQOkEUAdW+NU69OxuqaWFOO7Kox1ViomJwCBT1KqtmG4Zrcb40O4rfdAX0RBXphcPTuOtr1Q6fyq1h0B0W74ZLz6wsSzRBFdjx7+Fj3Ka8sjYT9TGbTrtX/dkkhKLbDXgwg3Kaoo9NbCTvuSSeEM8o9MV35XHI7IF30JfnMMl43vSeXKFb1qq/KjdlB/U/Nhor/M2bSMhyd Severin@Severins-MBP.fritz.box"
            },
            "metadata_fingerprint": "9p0kOwA-zII=",
            "name": "kubeedge-cluster-master-0",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.118.62.203",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/eco-bench/global/networks/kubeedge-cluster-network",
                "network_ip": "10.0.10.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/eco-bench/regions/europe-central2/subnetworks/kubeedge-cluster-subnet",
                "subnetwork_project": "eco-bench"
              }
            ],
            "project": "eco-bench",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/eco-bench/zones/europe-central2-a/instances/kubeedge-cluster-master-0",
            "service_account": [
              {
                "email": "187503970490-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "master"
            ],
            "tags_fingerprint": "4y7qQ8dL1yM=",
            "zone": "europe-central2-a"
          },
          "dependencies": [
            "google_compute_address.master",
            "google_compute_network.main",
            "google_compute_subnetwork.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "worker-0",
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20210429",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/eco-bench/zones/europe-central2-a/disks/kubeedge-cluster-worker-0"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/eco-bench/zones/europe-central2-a/instances/kubeedge-cluster-worker-0",
            "instance_id": "560860734193964141",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-small",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDFKqYe+MLcN297yEeyJMOY/213RuaaofCKNzatn9tBtTdnylYIwIG5OzqNbEXX1vpsbF76PPI4XmCEO9oqCTE2/Zjo2+HwudYQtzIn1T+xGWPmTxJVw462sWEy817Gv5uR+rZSzstVhnQOkEUAdW+NU69OxuqaWFOO7Kox1ViomJwCBT1KqtmG4Zrcb40O4rfdAX0RBXphcPTuOtr1Q6fyq1h0B0W74ZLz6wsSzRBFdjx7+Fj3Ka8sjYT9TGbTrtX/dkkhKLbDXgwg3Kaoo9NbCTvuSSeEM8o9MV35XHI7IF30JfnMMl43vSeXKFb1qq/KjdlB/U/Nhor/M2bSMhyd Severin@Severins-MBP.fritz.box"
            },
            "metadata_fingerprint": "9p0kOwA-zII=",
            "name": "kubeedge-cluster-worker-0",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.118.65.241",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/eco-bench/global/networks/kubeedge-cluster-network",
                "network_ip": "10.0.10.3",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/eco-bench/regions/europe-central2/subnetworks/kubeedge-cluster-subnet",
                "subnetwork_project": "eco-bench"
              }
            ],
            "project": "eco-bench",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/eco-bench/zones/europe-central2-a/instances/kubeedge-cluster-worker-0",
            "service_account": [
              {
                "email": "187503970490-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "worker"
            ],
            "tags_fingerprint": "uvqiNQvnefU=",
            "zone": "europe-central2-a"
          },
          "dependencies": [
            "google_compute_subnetwork.main",
            "google_compute_address.worker",
            "google_compute_network.main"
          ]
        },
        {
          "index_key": "worker-1",
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20210429",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/eco-bench/zones/europe-central2-a/disks/kubeedge-cluster-worker-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/eco-bench/zones/europe-central2-a/instances/kubeedge-cluster-worker-1",
            "instance_id": "3252290316511253613",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-small",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDFKqYe+MLcN297yEeyJMOY/213RuaaofCKNzatn9tBtTdnylYIwIG5OzqNbEXX1vpsbF76PPI4XmCEO9oqCTE2/Zjo2+HwudYQtzIn1T+xGWPmTxJVw462sWEy817Gv5uR+rZSzstVhnQOkEUAdW+NU69OxuqaWFOO7Kox1ViomJwCBT1KqtmG4Zrcb40O4rfdAX0RBXphcPTuOtr1Q6fyq1h0B0W74ZLz6wsSzRBFdjx7+Fj3Ka8sjYT9TGbTrtX/dkkhKLbDXgwg3Kaoo9NbCTvuSSeEM8o9MV35XHI7IF30JfnMMl43vSeXKFb1qq/KjdlB/U/Nhor/M2bSMhyd Severin@Severins-MBP.fritz.box"
            },
            "metadata_fingerprint": "9p0kOwA-zII=",
            "name": "kubeedge-cluster-worker-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.118.103.31",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/eco-bench/global/networks/kubeedge-cluster-network",
                "network_ip": "10.0.10.4",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/eco-bench/regions/europe-central2/subnetworks/kubeedge-cluster-subnet",
                "subnetwork_project": "eco-bench"
              }
            ],
            "project": "eco-bench",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/eco-bench/zones/europe-central2-a/instances/kubeedge-cluster-worker-1",
            "service_account": [
              {
                "email": "187503970490-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "worker"
            ],
            "tags_fingerprint": "uvqiNQvnefU=",
            "zone": "europe-central2-a"
          },
          "dependencies": [
            "google_compute_address.worker",
            "google_compute_network.main",
            "google_compute_subnetwork.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "id": "projects/eco-bench/global/networks/kubeedge-cluster-network",
            "mtu": 0,
            "name": "kubeedge-cluster-network",
            "project": "eco-bench",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/eco-bench/global/networks/kubeedge-cluster-network"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-05-31T11:26:50.990-07:00",
            "gateway_address": "10.0.10.1",
            "id": "projects/eco-bench/regions/europe-central2/subnetworks/kubeedge-cluster-subnet",
            "ip_cidr_range": "10.0.10.0/24",
            "name": "kubeedge-cluster-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/eco-bench/global/networks/kubeedge-cluster-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "eco-bench",
            "region": "europe-central2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/eco-bench/regions/europe-central2/subnetworks/kubeedge-cluster-subnet"
          },
          "dependencies": [
            "google_compute_network.main"
          ]
        }
      ]
    }
  ]
}